--- a/automotive/src/main/res/values/strings.xml
+++ b/automotive/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="max_buff_description_automotive">Maximum buffer, in milliseconds</string>
     <string name="min_buff_description_automotive">Minimum buffer, in milliseconds</string>
     <string name="stream_buffering_descr_automotive">Restart playback when values are changed. Range is %1$d - %2$d milliseconds (%3$d second - %4$d minutes)</string>
+    <string name="source_changes_text">Apply source changes?</string>
 </resources>
