Manage multiple Sources via settings menu. Part 11. Compile and run.

--- a/common-ui/src/main/res/values/strings.xml
+++ b/common-ui/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="about_exo_title">Playback</string>
     <string name="about_exo_text">ExoPlayer</string>
     <string name="about_radio_browser_title">Community Radio Browser</string>
+    <string name="about_web_radio_title">Community Web Radio</string>
     <string name="about_graphics">Graphics</string>
     <string name="about_graphics_link">Vector assets from Android Studio</string>
     <string name="about_author">Author</string>
