Add Logging layer

--- a/common-ui/src/main/res/values/strings.xml
+++ b/common-ui/src/main/res/values/strings.xml
@@ -109,4 +109,5 @@
     <string name="empty_search_msg">Empty Search Query</string>
     <item type="id" name="imageUpdated" />
     <item type="id" name="imageId" />
+    <string name="send_logs_lbl">Send Logs</string>
 </resources>
