--- a/common-ui/src/main/res/values/strings.xml
+++ b/common-ui/src/main/res/values/strings.xml
@@ -32,25 +32,17 @@
     <string name="link_text">Link</string>
     <string name="enable_last_known_radio_station_label">Play last known Radio Station\n(enables application to play last known Radio Station automatically on start)</string>
     <string name="bt_auto_restart_descr">Resume playback when re-connected to the same Bluetooth Device</string>
-    <string name="custom_user_agent_label">Custom User Agent:</string>
+    <string name="custom_user_agent_label">Custom User Agent</string>
     <string name="custom_user_agent_hint">Custom User Agent empty</string>
     <string name="user_agent_empty_warning">User Agent can not be empty</string>
-    <string name="settings_master_volume">Master volume:</string>
+    <string name="settings_player_volume">Player\'s volume</string>
     <string name="min_buff_description">Minimum duration of media that the player will attempt to ensure is buffered at all times, in milliseconds</string>
     <string name="max_buff_description">Maximum duration of media that the player will attempt to buffer, in milliseconds</string>
     <string name="playback_buffer_description">Duration of media that must be buffered for playback to start or resume, in milliseconds</string>
     <string name="playback_buffer_after_rebuffer_description">Duration of media that must be buffered for playback to resume after a re-buffer, in milliseconds</string>
     <string name="restore_default">Restore Default</string>
-    <string name="storage_error_when_save">Error while save Radio Stations to Storage</string>
-    <string name="storage_error_when_read">Error while read Radio Stations from Storage</string>
-    <string name="storage_data_saved">Radio Stations are saved to Storage</string>
-    <string name="storage_data_read">Radio Stations are read from Storage</string>
-    <string name="can_not_create_user">Can not Create Account</string>
-    <string name="can_not_sign_in">Can not Sign In</string>
-    <string name="storage">Storage</string>
-    <string name="storage_upload_info">Upload Favorites and Local Stations to Storage.\nNOTE: This may overwrite previous uploads.</string>
-    <string name="upload">Upload</string>
-    <string name="storage_download_info">Download Favorites and Local Stations from Storage.</string>
+    <string name="cloud_storage">Cloud Storage</string>
+    <string name="account">Account</string>
     <string name="can_not_play_station">Can not play Station</string>
     <string name="error_loading_media">Error Loading Media</string>
     <string name="app_settings_title">Settings</string>
@@ -78,19 +70,17 @@
     <string name="add_station_country_label">Country:</string>
     <string name="ellipsis">…</string>
     <string name="can_not_open_file">Can not open File</string>
-    <string name="download">Download</string>
     <string name="add_to_fav_string">Add to Favorites</string>
     <string name="add_to_srvr_string">Add to Server</string>
     <string name="edit_station_dialog_title">Edit Radio Station</string>
     <string name="edit_station_dialog_button_label">Edit</string>
-    <string name="can_not_edit_station_label">Can not edit Radio Station</string>
     <string name="equalizer_presets_label">System presets:</string>
     <string name="eq_not_available">Equalizer is not available</string>
     <string name="main_menu_general">General</string>
     <string name="main_menu_buffering">@string/buffering</string>
     <string name="main_menu_network">@string/network</string>
     <string name="main_menu_source">@string/source</string>
-    <string name="main_menu_storage">Storage</string>
+    <string name="main_menu_cloud_storage">Cloud Storage</string>
     <string name="main_menu_about">About</string>
     <string name="main_menu_sleep_timer">Sleep Timer</string>
     <string name="easy_swipe_title">Swipe effect</string>
@@ -103,8 +93,6 @@
     <string name="default_country_label">Default country:</string>
     <string name="date_lbl">Date</string>
     <string name="time_lbl">Time</string>
-    <string name="can_not_set_time">Can not set Time</string>
-    <string name="can_not_set_date">Can not set Date</string>
     <string name="use_mobile_network">Use Mobile network</string>
     <string name="empty_search_msg">Empty Search Query</string>
     <item type="id" name="imageUpdated" />
@@ -112,5 +100,10 @@
     <string name="send_logs_lbl">Send Logs</string>
     <string name="e_mail_txt">E-Mail</string>
     <string name="password_txt">Password</string>
-    <string name="create_account_text">Create Your Account\nusing any Email and Password combination\nor Log In</string>
+    <string name="create">Create</string>
+    <string name="sign_in">Sign In</string>
+    <string name="or">or</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="success">Success</string>
+    <string name="failure">Failure</string>
 </resources>
