--- a/common-ui/src/main/res/values/strings.xml
+++ b/common-ui/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="stream_buffering_descr">Restart playback when values are changed\nRange is %1$d - %2$d milliseconds\n(%3$d second - %4$d minutes)</string>
     <string name="invalid_buffer_desc">Invalid value of buffer : </string>
     <string name="search_label">Search</string>
-    <string name="content_description_category_icon">Category Icon</string>
+    <string name="content_description_category_icon">Icon</string>
     <string name="search_description">Type the word that you want to use as the search pattern</string>
     <string name="add_station_dialog_title">Add Radio Station</string>
     <string name="add_station_dialog_button_label">Add</string>
