--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="no_data_message">No data received</string>
     <string name="favorite">Favorite</string>
     <string name="favorites_list_title">Favorites</string>
+    <string name="featured_list_title">Featured</string>
     <string name="new_stations_title">New</string>
     <string name="browse_title">Browse</string>
     <string name="popular_stations_title">Popular</string>
